Update styles files

--- a/video.html
+++ b/video.html
@@ -28,13 +28,13 @@
     </header>
     <body class="body">   
         <br>
-    <div>  
+    <div class="div-iframe">  
         <a class="dec" href="https://youtu.be/96KMm_DpsTE" target="_blank"><h3 class="h3-vid1">Praise and Worship</h3></a>
 
-        <iframe id="worship" width="560" height="315" src="https://www.youtube.com/embed/96KMm_DpsTE?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="worship" width="560" height="315" src="https://www.youtube.com/embed/96KMm_DpsTE?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <a href="https://youtu.be/RCJmonPdlko" class="dec" target="_blank"><h3 class="h3-vid2">He can do</h3></a>
         
-        <iframe id="can-do" width="560" height="315" src="https://www.youtube.com/embed/RCJmonPdlko?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="worship" width="560" height="315" src="https://www.youtube.com/embed/RCJmonPdlko?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br>
         <br>
 
